[gd_scene load_steps=4 format=2]

[ext_resource path="res://TileButton.gd" type="Script" id=1]
[ext_resource path="res://assets/X.png" type="Texture" id=2]
[ext_resource path="res://assets/O.png" type="Texture" id=3]

[node name="Button" type="Button"]
margin_right = 641.0
margin_bottom = 480.0
rect_scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="X_Texture" type="TextureRect" parent="."]
visible = false
margin_left = -1.0
margin_top = 1.0
margin_right = 639.0
margin_bottom = 481.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="O_Texture" type="TextureRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 480.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
